--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 *jl
 *json
 *sqlite
-
+*yml
+*tsv
 # Created by .ignore support plugin (hsz.mobi)
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
